fix spacing

--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -1,5 +1,5 @@
-$primary: #d2dcce;
-$secondary: #190222;
-$third: #766f78;
-$fourth: #47394d;
-$fifth: #a4a6a3
+$primary: #000004;
+$secondary: #9c3077;
+$third: #0f092c;
+$fourth: #502c86;
+$fifth: #241f58
